--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 core-header-panel {
   background: white;
 }
-core-toolbar {
-  background-color: #03A9F4;
-}
 
+.core-header {
+  background-color: #fee8ac;
+}
