--- a/dest/css/main.css
+++ b/dest/css/main.css
@@ -5,3 +5,24 @@ core-header-panel {
 .core-header {
   background-color: #fee8ac;
 }
+
+body {
+  font-family: sans-serif;
+}
+core-header-panel[mode=cover]::shadow #mainContainer {
+  left: 80px;
+}
+.content {
+  margin: 60px 60px 60px 0;
+}
+
+@media (max-width:680px) {
+  core-header-panel[mode=cover]::shadow #mainContainer {
+    left: 0;
+  }
+
+  .content {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
